<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/MainQues"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <RadioGroup
        android:id="@+id/rgMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rQuad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Quad"
            android:textColor="@color/text" />

        <RadioButton
            android:id="@+id/rLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Linear2"
            android:textColor="@color/text" />

        <RadioButton
            android:id="@+id/rLine3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Linear3"
            android:textColor="@color/text" />
    </RadioGroup>

    <Button
        android:id="@+id/bMain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/button" />

</LinearLayout>