<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    android:padding="20dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Heading of the page -->

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:text="@string/QuadHead"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!-- Quadratic equation definition -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHead"
            android:text="@string/QuadMain"
            android:textColor="@color/text"
            android:textSize="15sp" />
        <!-- Sample Quadratic equation set on load -->

        <TextView
            android:id="@+id/tvQuadeq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text" />
        <!-- Quadratic equation instruction -->

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuadeq"
            android:paddingBottom="20dp"
            android:text="@string/QuadQues"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:paddingLeft="34dp"
            android:text="@string/a"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"
            android:text="@string/b"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/eTa"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/tVC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eTa"
            android:layout_alignParentLeft="true"
            android:gravity="right"
            android:paddingRight="34dp"
            android:text="@string/c"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/eTc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tVC"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/eTb"
            android:layout_width="80dp"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <Button
            android:id="@+id/bQuadSolve"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/solve" />

        <TextView
            android:id="@+id/tvQuadAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bQuadSolve"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>