<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:padding="20dp"
    android:scrollbarStyle="insideOverlay" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:text="@string/LinearHead2"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHead"
            android:text="@string/QuadMain"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvLinearEq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLinearEq"
            android:paddingBottom="20dp"
            android:text="@string/Linear2Ques"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:paddingLeft="34dp"
            android:text="@string/a"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"
            android:text="@string/b"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/tVC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView4"
            android:gravity="right"
            android:paddingRight="34dp"
            android:text="@string/c"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/eTL2a1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eTL2b1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eTL2c1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tVC"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eTL2a2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eTL2a1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eTL2b2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTL2b1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eTL2c2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eTL2c1"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bLinearSolve"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTL2b2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/solve" />

        <TextView
            android:id="@+id/tvLinear2Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bLinearSolve"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>