<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:padding="20dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingTop="10dp"
                android:text="@string/LinearHead3"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHead"
                android:text="@string/QuadMain"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvLinearEq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLinearEq3"
                android:paddingBottom="20dp"
                android:text="@string/LinearQues3"
                android:textColor="@color/text"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="34dp"
                android:text="@string/a"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@id/textView1"
                android:text="@string/b"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/tVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@id/textView2"
                android:text="@string/c"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/tvC131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@id/tVC"
                android:text="@string/d"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/eTL3a1"
                android:layout_width="70dp"
                android:layout_below="@id/textView1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionNext"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3b1"
                android:layout_width="70dp"
                android:layout_below="@id/textView2"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/eTL3a1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionNext"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3c1"
                android:layout_below="@id/tVC"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/eTL3b1"
                android:imeOptions="actionNext"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3d1"
                android:layout_below="@id/tvC131"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:layout_toRightOf="@id/eTL3c1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3a2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/eTL3a1"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3b2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3b1"
                android:imeOptions="actionNext"
                android:layout_toRightOf="@id/eTL3a2"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3c2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3c1"
                android:layout_toRightOf="@id/eTL3b2"
                android:imeOptions="actionNext"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3d2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3d1"
                android:layout_toRightOf="@id/eTL3c2"
                android:imeOptions="actionNext"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3a3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/eTL3a2"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3b3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3b2"
                android:layout_toRightOf="@id/eTL3a3"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3c3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3c2"
                android:layout_toRightOf="@id/eTL3b3"
                android:imeOptions="actionNext"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/eTL3d3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTL3d2"
                android:layout_toRightOf="@id/eTL3c3"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/bLine3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/solve" />

        <TextView
            android:id="@+id/tvLinear3Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bLine3"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>